--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -41,7 +41,7 @@
     <main>
         <section class="home">
             <div class="container-lg">
-                <div class="row flex-wrap-reverse flex-lg-wrap">
+                <div class="decoration row flex-wrap-reverse flex-lg-wrap">
                     <div class="col-lg-5 col-xl-4 col-12 pt-5 text-center text-lg-start">
                         <div class="link">
                             <a href="#" class="btn btn-shadow">Explore the world!</a>
