landing page updates

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -101,29 +101,29 @@
                             <h2>Our top value categories for you</h2>
                         </div>
                     </div>
-                    <div class="col-12 col-xl-8 p-custom">
-                        <div class="row text-center">
-                            <div class="col-12 col-lg-4 col-xl-6">
-                                <div class="service border p-5 rounded-5">
-                                    <div>
+                    <div class="col-xl-8 p-custom">
+                        <div class="row text-center gy-3">
+                            <div class="col-lg-4 col-xl-6">
+                                <div class="service p-5 rounded-5">
+                                    <div class="mb-5">
                                         <img src="assets/icons/globe.png" /> 
                                     </div>
-                                    <h3>Best Tour Guide</h3>
+                                    <h3 class="mb-4">Best Tour Guide</h3>
                                     <p>What looked like a small patch of purple grass, above five feet.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-4 col-xl-6">
-                                <div class="service border p-5 rounded-5">
-                                    <div>
+                            <div class="col-lg-4 col-xl-6">
+                                <div class="service p-5 rounded-5">
+                                    <div class="mb-5">
                                         <img src="assets/icons/app.png" /> 
                                     </div>
                                     <h3>Easy Booking</h3>
                                     <p>Square, was moving across the sand in their direction.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-4 d-xl-none">
-                                <div class="service border p-5 rounded-5">
-                                    <div>
+                            <div class="col-lg-4 d-xl-none">
+                                <div class="service p-5 rounded-5">
+                                    <div class="mb-5">
                                         <img src="assets/icons/clouds.png" /> 
                                     </div>
                                     <h3>Weather Forecast</h3>
@@ -135,6 +135,181 @@
                 </div>
             </div>
         </section>
+        <section class="destinations my-5">
+            <div class="container-lg">
+                <div class="row mb-5">
+                    <div class="col-lg-6">
+                        <div class="section-heading">
+                            <h3>Top Destination</h3>
+                            <h2>Explore top destination</h2>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="arrows">
+                            <a href="#" class="left">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.41431 11.0005H20.0001C20.5524 11.0005 21.0001 11.4482 21.0001 12.0005C21.0001 12.5528 20.5524 13.0005 20.0001 13.0005H6.41431L9.65695 16.2432C10.0475 16.6337 10.0475 17.2669 9.65695 17.6574C9.26642 18.0479 8.63326 18.0479 8.24273 17.6574L4.00009 13.4147C3.21904 12.6337 3.21904 11.3674 4.00009 10.5863L8.24273 6.34367C8.63326 5.95315 9.26642 5.95315 9.65695 6.34367C10.0475 6.7342 10.0475 7.36736 9.65695 7.75789L6.41431 11.0005Z" />
+                                </svg>    
+                            </a>
+                            <a href="#" class="right">
+                                <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M14.5857 5.00053H0.999907C0.447622 5.00053 -9.34601e-05 5.44824 -9.34601e-05 6.00053C-9.34601e-05 6.55281 0.447622 7.00053 0.999907 7.00053H14.5857L11.3431 10.2432C10.9525 10.6337 10.9525 11.2669 11.3431 11.6574C11.7336 12.0479 12.3667 12.0479 12.7573 11.6574L16.9999 7.41474C17.781 6.63369 17.781 5.36736 16.9999 4.58632L12.7573 0.343674C12.3667 -0.0468498 11.7336 -0.0468498 11.3431 0.343674C10.9525 0.734199 10.9525 1.36736 11.3431 1.75789L14.5857 5.00053Z" />
+                                </svg>  
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row gy-4">
+                    <div class="col-lg-4">
+                        <div class="destination rounded-5">
+                            <img src="assets/images/1.png" alt="" />
+                            <div class="p-4">
+                                <div class="d-flex justify-content-between">
+                                    <h3>Paradise Beach, Bantayan Island</h3>
+                                    <div class="price">$550.16</div>
+                                </div>
+                                <div class="location">Rome, Italy</div>
+                                <div class="rating">4.8</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="destination rounded-5">
+                            <img src="assets/images/2.png" alt="" />
+                            <div class="p-4">
+                                <div class="d-flex justify-content-between">
+                                    <h3>Ocean with full of Colors</h3>
+                                    <div class="price">$20.99</div>
+                                </div>
+                                <div class="location">Maldives</div>
+                                <div class="rating">4.5</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="destination rounded-5">
+                            <img src="assets/images/3.png" alt="" />
+                            <div class="p-4">
+                                <div class="d-flex justify-content-between">
+                                    <h3>Mountain View, Above the cloud</h3>
+                                    <div class="price">$150.99</div>
+                                </div>
+                                <div class="location">United Arab Emeries </div>
+                                <div class="rating">4.3</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="travel">
+            <div class="container-lg">
+                <div class="row">
+                    <div class="col-xl-7">
+                        <div class="image"></div>
+                    </div>
+                    <div class="col-xl-5 py-5">
+                        <div class="section-heading">
+                            <h3>Travel Point</h3>
+                            <h2>We helping you find your dream location</h2>
+                        </div>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC.</p>
+                        <div class="row gy-4">
+                            <div class="col-lg-6">
+                                <div class="feature">
+                                    <h3>500+</h3>
+                                    <span>Holiday Package</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="feature">
+                                    <h3>100</h3>
+                                    <span>Luxury Hotels</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="feature">
+                                    <h3>7</h3>
+                                    <span>Premium Airlines</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="feature">
+                                    <h3>2k+</h3>
+                                    <span>Happy Customer</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <div class="logo">
+                        <img src="assets/images/logo.png" alt="Logotipas" />
+                    </div>
+                    <p class="pe-lg-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC.</p>
+                    <div class="social">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px">    
+                                        <path d="M12,27V15H8v-4h4V8.852C12,4.785,13.981,3,17.361,3c1.619,0,2.475,0.12,2.88,0.175V7h-2.305C16.501,7,16,7.757,16,9.291V11 h4.205l-0.571,4H16v12H12z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <svg width="19" height="16" viewBox="0 0 19 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.8006 2.49851C18.115 2.80255 17.3774 3.00819 16.6039 3.10003C17.3937 2.62686 17.9998 1.87817 18.2858 0.984589C17.5468 1.42296 16.728 1.74098 15.8572 1.91239C15.1596 1.16941 14.1656 0.705078 13.065 0.705078C10.9532 0.705078 9.24051 2.4178 9.24051 4.52953C9.24051 4.82929 9.27445 5.12106 9.34005 5.40115C6.16161 5.24171 3.3434 3.71923 1.45699 1.40471C1.12785 1.96944 0.939039 2.62686 0.939039 3.32763C0.939039 4.65417 1.61471 5.82526 2.64035 6.51092C2.01373 6.49124 1.42362 6.31925 0.908236 6.03204C0.90795 6.0483 0.90795 6.06456 0.90795 6.08053C0.90795 7.93357 2.22679 9.47915 3.97601 9.83025C3.65543 9.9181 3.31688 9.96459 2.96863 9.96459C2.72163 9.96459 2.48234 9.94092 2.24903 9.89642C2.73561 11.4155 4.14771 12.5213 5.82164 12.5523C4.5125 13.5783 2.86367 14.1895 1.07138 14.1895C0.763346 14.1895 0.458166 14.1715 0.159546 14.1359C1.85116 15.2214 3.86192 15.8543 6.02157 15.8543C13.0561 15.8543 16.9031 10.0268 16.9031 4.97247C16.9031 4.80676 16.8994 4.64162 16.892 4.4779C17.6398 3.93885 18.2881 3.26546 18.8006 2.49851Z" />
+                                    </svg>                                    
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M12.8 0.199219H3.19996C1.53328 0.199219 0.199951 1.53255 0.199951 3.19923V12.7992C0.199951 14.4659 1.53328 15.7992 3.19996 15.7992H12.8C14.4666 15.7992 15.8 14.4659 15.8 12.7992V3.19922C15.8 1.53255 14.4666 0.199219 12.8 0.199219ZM13.6666 1.99922H14V4.66588H11.3333V1.99922H13.6666ZM5.79997 6.39923C6.26663 5.73255 7.1333 5.26588 7.99997 5.26588C8.86664 5.26588 9.73331 5.73255 10.2 6.39923C10.5333 6.86589 10.7333 7.39922 10.7333 7.99922C10.7333 9.53255 9.46663 10.7326 7.99997 10.7326C6.5333 10.7326 5.26664 9.53256 5.26664 7.99922C5.26663 7.39922 5.46663 6.86589 5.79997 6.39923ZM14.2666 12.7992C14.2666 13.5992 13.6 14.2659 12.8 14.2659H3.19996C2.39996 14.2659 1.73329 13.5992 1.73329 12.7992V6.39923H4.06662C3.86661 6.86589 3.73329 7.46589 3.73329 7.99922C3.73329 10.3326 5.66663 12.2659 7.99996 12.2659C10.3333 12.2659 12.2666 10.3326 12.2666 7.99922C12.2666 7.46589 12.1333 6.86588 11.9333 6.39923H14.2666L14.2666 12.7992Z" />
+                                    </svg> 
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row footer-links">
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h3>Company</h3>
+                            <ul>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Career</a></li>
+                                <li><a href="#">Mobile</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h3>Contact</h3>
+                            <ul>
+                                <li><a href="#">Why Travlog?</a></li>
+                                <li><a href="#">Partner with us</a></li>
+                                <li><a href="#">FAQ’s</a></li>
+                                <li><a href="#">Blog</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h3>Meet Us</h3>
+                            <ul>
+                                <li>+00 92 1234 56789</li>
+                                <li>info@travlog.com</li>
+                                <li>205. R Street, New York BD23200</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
